--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,11 @@
 
     <button id="btnSayHello" class="btn btn-outline-success mt-5">Say Hello</button>
 
+    <button id="btnSayHello" class="btn btn-outline-success mt-5">Test</button>
+
+    <button id="btnSayHello" class="btn btn-outline-success mt-5">Test 2</button>
+    <img src="../image4.jpg" alt="">
+
 
 
 </body>
